Use LinkedLists for Segments and Waypoints